fix: tg pre next 10 items
